# myArxivAggregator

./: .gitignore  IMPLEMENTATION_PLAN_TESTS.md  README.md  aggregator.py  aggregator_cr.py  aggregator_cv.py  aggregator_hc.py  aggregator_ml.py  aggregator_ro.py  config.py  content_utils.py  generate_html.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff_issues.json  run_all_aggregators.py
src/arxiv_aggregator/: __init__.py  config.py  content_utils.py  core.py  featured_tracker.py  generate_html.py
src/arxiv_aggregator/templates/: base_template.html  cr_template.html  cv_template.html  hc_template.html  ml_template.html  ro_template.html
tests/: conftest.py
tests/fixtures/: sample_articles.py
tests/integration/: test_aggregator_workflow.py
tests/security/: test_input_validation.py
tests/unit/: test_aggregator_unit.py  test_config.py  test_content_utils.py  test_featured_tracker.py  test_generate_html.py
typings/: py.typed
typings/feedparser/: __init__.pyi  api.pyi  encodings.pyi  html.pyi  http.pyi  mixin.pyi  sanitizer.pyi  sgml.pyi  urls.pyi  util.pyi
typings/feedparser/datetimes/: asctime.pyi  greek.pyi  hungarian.pyi  iso8601.pyi  korean.pyi  perforce.pyi  rfc822.pyi  w3dtf.pyi
typings/feedparser/namespaces/: georss.pyi  psc.pyi
typings/feedparser/parsers/: loose.pyi  strict.pyi
