[project]
name = "myArxivAggregator"
version = "0.1.0"
description = "A Python-based web application that automatically fetches, processes, and publishes the latest research papers from arXiv across multiple computer science domains including AI, Machine Learning, Computer Vision, Robotics, and Cryptography/Security."
authors = [{ name = "Alexander Jensen", email = "thanotosq@gmail.com" }]
dependencies = [
    "feedparser>=6.0.12",
    "requests>=2.32.5",
    "Pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "dotenv>=0.9.9",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "types-requests>=2.32.4.20260107",
    "uvicorn>=0.41.0",
    "pytest>=9.0.2",
    "pyproject-toml>=0.1.0",
    "responses>=0.24.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.mypy]
python_version = "3.13"
# Tell mypy where to find the feedparser stubs
mypy_path = "./typings"
# Enable strict mode for better type checking
strict = true
# Ignore missing imports for packages that don't have stubs (some may be handled elsewhere)
ignore_missing_imports = true

# Handle untyped imports from third-party packages
[tool.mypy-feedparser]
ignore_errors = false

[tool.mypy-requests]
ignore_errors = false

[tool.pyright]
# Include the typings directory for custom stubs
include = ["typings"]
extraPaths = ["./typings"]
# Python version for type checking
pythonVersion = "3.13"
# Type checking mode
typeCheckingMode = "standard"

[tool.pdm]
distribution = false

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

# Ignore specific rules
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore assert statements and other test-specific rules in test files
"tests/*" = [
    "S101",    # Use of assert detected
    "PT019",   # Fixture without value is injected as parameter
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "SLF001",  # Private member accessed
    "ARG001",  # Unused function argument
    "PLR2004", # Magic value used in comparison
    "N806",    # Variable in function should be lowercase
    "FBT003",  # Boolean positional value in function call
    "NPY002",  # Replace legacy numpy random calls
    "UP017",   # Use datetime.UTC alias
    "E402",    # Module level import not at top of file
    "PLC0415", # Import should be at the top-level of a file
    "COM812",  # Trailing comma missing
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.uv.workspace]
members = ["myArxivAggregator"]
